# datafusion-benchmarks

./: .asf.yaml  .gitignore  README.md  requirements.txt
microbenchmarks/: README.md  conditional_results.md  microbenchmarks.py  requirements.txt  string_functions_benchmark.py  string_results.md  temporal_results.md
microbenchmarks/suites/: __init__.py  conditional.py  numeric.py  strings.py  temporal.py
runners/datafusion-ballista/: Cargo.toml  README.md
runners/datafusion-ballista/src/: main.rs
runners/datafusion-comet/: README.md  tpcbench.py
runners/datafusion-python/: README.md  tpcbench.py
runners/datafusion-rust/: .gitignore  Cargo.toml
runners/datafusion-rust/src/: main.rs
runners/spark/: README.md  tpcbench.py
scripts/: compare.py  generate-comparison.py
tpcds/: .gitignore  Dockerfile  README.md  gen.sh  tpcdsgen.py
tpcds/data/: README.md
tpcds/data/sf1/: call_center.parquet  catalog_page.parquet  customer.parquet  customer_address.parquet  customer_demographics.parquet  date_dim.parquet  household_demographics.parquet  income_band.parquet  item.parquet  promotion.parquet  reason.parquet  ship_mode.parquet  store.parquet  time_dim.parquet  warehouse.parquet  web_page.parquet  web_site.parquet
tpcds/queries-spark/: q72_optimized.sql
tpch/: README.md  tpchgen.py
